[gd_scene load_steps=4 format=3 uid="uid://c5diwowsgmb3e"]

[ext_resource type="Script" uid="uid://ifn8pyo7w22u" path="res://theme_manager.gd" id="1_o4xtp"]
[ext_resource type="Theme" uid="uid://tsr3tsg1bvgf" path="res://theme.tres" id="1_qcn1x"]
[ext_resource type="Texture2D" uid="uid://dntee7bbspqbo" path="res://assets/Image.png" id="3_eh1om"]

[node name="ContainerThemes" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qcn1x")
script = ExtResource("1_o4xtp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_qcn1x")
theme_override_constants/separation = 16
metadata/_tab_name = "THEMES"
metadata/_tab_index = 1

[node name="M8GD" type="M8GD" parent="VBoxContainer"]
unique_name_in_owner = true

[node name="FileDialog" type="FileDialog" parent="VBoxContainer"]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButtonNumColors" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "4 Colors"
popup/item_0/id = 0
popup/item_1/text = "13 Colors"
popup/item_1/id = 1

[node name="ButtonOpenImage" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Open Image..."
icon = ExtResource("3_eh1om")

[node name="LineEditImage" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRectImage" type="TextureRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 2
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer2" type="GridContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/v_separation = 0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Background"

[node name="Color1" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Background"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Text: Empty"

[node name="Color2" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Text: Empty"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Text: Info"

[node name="Color3" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Text: Info"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label13" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Text: Default"

[node name="Color4" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Text: Default"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Text: Value"

[node name="Color5" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Text: Value"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Text: Titles"

[node name="Color6" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Text: Titles"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Play Markers"

[node name="Color7" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Play Markers"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Cursor"

[node name="Color8" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Cursor"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Selection"

[node name="Color9" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Selection"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Scope/Slider"

[node name="Color10" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Scope/Slider"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color10"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label10" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Meter Low"

[node name="Color11" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Meter Low"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color11"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label11" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Meter Mid"

[node name="Color12" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Meter Mid"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color12"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label12" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Meter Peak"

[node name="Color13" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"FlatColorPickerButton"
text = "Meter Peak"
flat = true
alignment = 0
edit_alpha = false

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/Color13"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPushToM8" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Push colors to M8"
